# siproxd

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  RELNOTES  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  siproxd.spec  siproxd.spec.in
contrib/: Makefile.am  asterisk_chan_sip_xar.patch
doc/: .gitignore  FAQ  KNOWN_BUGS  Makefile.am  Makefile.in  RFC3261_compliance.txt  ReleaseProcedure.txt  build_FreeBSD.doc  devel.txt  sample_cfg_x-lite.txt  siproxd.conf.example  siproxd_guide.sgml
scripts/: .gitignore
src/: .gitignore  Makefile.am  Makefile.in  accessctl.c  addrcache.c  addrcache.h  auth.c  custom_fw_module.c  dejitter.c  dejitter.h  digcalc.h  fwapi.c  fwapi.h  log.c  log.h  plugin_blacklist.c  plugin_codecfilter.c  plugin_defaulttarget.c  plugin_demo.c  plugin_fix_DTAG.c  plugin_fix_bogus_via.c  plugin_fix_fbox_anoncall.c  plugin_logcall.c  plugin_prefix.c  plugin_regex.c  plugin_regex_body.c  plugin_shortdial.c  plugin_siptrunk.c  plugin_stats.c  plugin_stripheader.c  plugin_stun.c  plugins.c  plugins.h  proxy.c  readconf.c  redirect_cache.c  register.c  resolve.c  rewrite_rules.h  route_processing.c  (+13 more)
tools/: extract_sip.pl
tools/sipp_testing/: README  myuac.xml  myuas.xml
